--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,28 +116,7 @@ jobs:
         CGO_ENABLED: 1
       run: go test -race ./...
 
-  security:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    needs: [validate, test]
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Run Trivy vulnerability scanner
-      uses: aquasecurity/trivy-action@master
-      with:
-        scan-type: 'fs'
-        scan-ref: '.'
-        format: 'sarif'
-        output: 'trivy-results.sarif'
-
-    - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v3
-      if: always()
-      with:
-        sarif_file: 'trivy-results.sarif'
 
   build:
     name: Build
@@ -202,7 +181,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: [test, quality, security, build]
+    needs: [test, quality, build]
     if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
