--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,13 +20,12 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.21'
+        go-version: 'stable'
         cache: true
 
     - name: Install Dependencies
       run: |
         go install honnef.co/go/tools/cmd/staticcheck@latest
-        go install github.com/mgechev/revive@latest
         go install github.com/securego/gosec/v2/cmd/gosec@latest
 
     - name: Go Format Check
@@ -43,15 +42,12 @@ jobs:
     - name: Staticcheck
       run: staticcheck ./...
 
-    - name: Revive (Golint replacement)
-      run: revive -config revive.toml ./... || true
-
     - name: Security Scan (gosec)
       continue-on-error: true
       run: |
         echo "Running security scan..."
         gosec -conf .gosec.json ./... || true
-        echo "✅ Security scan completed"
+        echo "Security scan completed"
 
     - name: Test with Race Detection
       run: go test -race -timeout 5m -v ./...
@@ -72,11 +68,15 @@ jobs:
   build:
     name: Build Matrix
     runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.os == 'macos-latest' }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        go-version: ['1.21']  # Reduced to save minutes
+        go-version: ['stable']  # Reduced to save minutes
+        include:
+          - os: macos-latest
+            timeout: 5  # Shorter timeout for macOS due to runner availability issues
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -89,6 +89,8 @@ jobs:
 
     - name: Build
       run: go build -v ./...
+      timeout-minutes: ${{ matrix.timeout || 15 }}
 
     - name: Short Test (no race, faster)
-      run: go test -short -timeout 30s ./...
+      run: go test -short -timeout 5m ./...
+      timeout-minutes: ${{ matrix.timeout || 15 }}
